--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "jest": "^26.4.0",
     "jest-css-modules": "^2.1.0",
     "lint-staged": "^10.2.11",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.2.4",
+    "postcss-loader": "^4.1.0",
     "precss": "^4.0.0",
     "prettier": "^2.0.5",
     "redux-logger": "^3.0.6",
@@ -75,7 +76,7 @@
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "hard-source-webpack-plugin": "^0.13.1",
+    "formik": "^2.2.6",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.3",
     "react": "^17.0.1",
@@ -86,7 +87,8 @@
     "ress": "^3.0.0",
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.11.1",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "yup": "^0.32.8"
   },
   "husky": {
     "hooks": {
